--- a/_posts/2019-04-16-1.IncDec-1.markdown
+++ b/_posts/2019-04-16-1.IncDec-1.markdown
@@ -14,7 +14,7 @@ tags: Java
 - 증가 감소 연산자
   - "++" , "--"
 
----
+<hr style="height: 1px; background: skyblue; "/>
 
 ~~~
 public static void main(String[] args) {
