--- a/_posts/2019-04-16-5.generallogical-5.markdown
+++ b/_posts/2019-04-16-5.generallogical-5.markdown
@@ -7,16 +7,17 @@ tags: Java
 
 ---
 ## Ex05_GeneralLogical [논리 연산자]
----
+<hr style="height: 1px; background: skyblue; "/>
 <p>
 - 비교 연산자<br>
   - 일반 논리 : (true/false)다루는 논리 : "&&" ,"||"<br>
   - 이진논리 : (bit에 있는 1/0): "&", "|", "^"<br>
   - "^" exclusive or ---> 더러 사용되어짐
 </p>
----
+<hr style="height: 1px; background: skyblue; "/>
 
 ~~~
+
 public class Ex05_GeneralLogical {
 
 	public static void main(String[] args) {
@@ -54,7 +55,9 @@ public class Ex05_GeneralLogical {
   		 */
 	}
 }
+
 ~~~
+
 
 - 결과
 
