--- a/_posts/2019-04-17-2.if-학번-2.markdown
+++ b/_posts/2019-04-17-2.if-학번-2.markdown
@@ -7,16 +7,19 @@ tags: Java
 
 ---
 ## Ex02.if문 학번 [제어문]
----
+
+<hr style="height: 1px; background: skyblue; "/>
+
 <p>
 -if문<br>
   - 1, 3, 9 이면 남자를 출력 <br>
   - 2, 4, 8 이면 여자를 출력 <br>
 </p>
 
----
+<hr style="height: 1px; background: skyblue; "/>
 
 ~~~
+
 public class Ex01_if_주민번호 {
 
 	public static void main(String[] args) {
