--- a/_posts/2019-04-18-2.do-while-2.markdown
+++ b/_posts/2019-04-18-2.do-while-2.markdown
@@ -7,7 +7,9 @@ tags: Java
 
 ---
 ## Ex10_do-while[제어문]
----
+
+<hr style="height: 1px; background: skyblue; "/>
+
 <p>
 while(false){ <br/>
  명령문 <br/>
@@ -19,7 +21,7 @@ do{ <br/>
 
 </p>
 
----
+<hr style="height: 1px; background: skyblue; "/>
 
 ~~~
 
