--- a/_posts/2019-04-15-6.example-6.markdown
+++ b/_posts/2019-04-15-6.example-6.markdown
@@ -8,7 +8,8 @@ tags: Java
 ---
 
 ## Ex06_example
----
+
+<hr style="height: 1px; background: skyblue; "/>
 
 - 세 정수 A,B,C, 가 주어진다.<br>
   - 이때 두 번째로 큰	정수를 출력하는 프로그램을 작성하시오.<br>
