--- a/_posts/2019-04-17-3.if-주민번호_나이-3.markdown
+++ b/_posts/2019-04-17-3.if-주민번호_나이-3.markdown
@@ -7,7 +7,9 @@ tags: Java
 
 ---
 ## Ex03.if문 주민번호_나이 [제어문]
----
+
+<hr style="height: 1px; background: skyblue; "/>
+
 <p>
 -if문<br>
   - 1, 3, 9 이면 남자를 출력 <br>
@@ -20,12 +22,14 @@ tags: Java
 
 </p>
 
----
-~~~
-import java.util.*;
+<hr style="height: 1px; background: skyblue; "/>
 ~~~
 
----
+import java.util.*;
+
+~~~
+
+<hr style="height: 1px; background: skyblue; "/>
 
 ~~~
 
