--- a/_posts/2019-04-19-1.배열-큰값구하기-1.markdown
+++ b/_posts/2019-04-19-1.배열-큰값구하기-1.markdown
@@ -7,12 +7,14 @@ tags: Java
 
 ---
 ## Ex03_큰값구하기[배열]
----
+
+<hr style="height: 1px; background: skyblue; "/>
+
 <p>
 int[] arr = { 22, 15, 13, 7, 25, 35 }; <br/>
 		// 이 중에서 가장 큰 값을 추출해서 출력
 
----
+<hr style="height: 1px; background: skyblue; "/>
 
 ~~~
 
