--- a/_posts/2019-10-15-1.React-intro-1.markdown
+++ b/_posts/2019-10-15-1.React-intro-1.markdown
@@ -1,298 +1,10 @@
 ---
 layout: post
-title:  "0805-1-[Hadoop]-hadoop-1.사전 설치"
-subtitle:   "0805-1.hadoop 사전 설치"
+title:  "1015-1-[React]-React-1.React란"
+subtitle:   "1015-1.React 소개"
 categories: devlog
-tags: Hadoop
+tags: React
 
 ---
-## 1.Hadoop 사전 설치
+## 1.React 란
 ---
-
-하둡을 시작하기 위해서는 사전에 설치할 파일들이 있습니다.
-<p>
-0. Virtual Box 설치
- <br/>
-( 현재 6.0 버전이지만 5.2 버전 다운로드 )
-
-https://www.virtualbox.org/   > Download > Vitural Box Old builds
-</p>
-
-<br/>
-
----
-
-<p>
-<img style="float: left;" src="https://user-images.githubusercontent.com/49095304/62450424-3f3e9c00-b7a7-11e9-8b4f-1791429d38a6.JPG" width="600">
-
-<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-
-</p>
-
----
-
-<p>
-* 0-1. Download virtualbox 클릭
-
-<br/>
-
-<img style="float: left;" src="https://user-images.githubusercontent.com/49095304/62450575-8dec3600-b7a7-11e9-801f-fd486a1aa399.JPG" width="200">
-
-</P>
-
-<br/><br/><br/>
-
----
-
-<p>
-
-* 0-2. virtualbox older builds 클릭
-
-<br/>
-
-<img style="float: left;" src="https://user-images.githubusercontent.com/49095304/62450774-ede2dc80-b7a7-11e9-861c-cc56e628adce.JPG" width="300">
-
-<br/><br/><br/><br/><br/>
-
-</p>
-
----
-
-<p>
-
-* 0-3.virtualbox 5.2 클릭
-
-<br/>
-
-<img style="float: left;" src="https://user-images.githubusercontent.com/49095304/62450967-4dd98300-b7a8-11e9-9b1d-5a171c33cddd.JPG" width="500">
-
-<br/><br/><br/><br/><br/>
-
-</p>
-
----
-
-<p>
-
-* 0-4.Windows hosts 클릭 후 다운로드
-
-<br/>
-
-<img style="float: left;" src="https://user-images.githubusercontent.com/49095304/62466664-d0743980-b7cc-11e9-9b3f-db629ffda95e.JPG" width="500"/>
-
-<br/><br/><br/><br/><br/><br/><br/><br/><br/>
-
-</p>
-
----
-
-<p>
-
-* 0-5.지정 파일에 저장 (항상 파일을 지정 위치에 저장 하자!)
-
-<br/>
-
-<img style="float: left;" src="https://user-images.githubusercontent.com/49095304/62466840-44aedd00-b7cd-11e9-9e8f-6036a4d0105d.JPG" width="600"/>
-
-<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-
-</p>
-
----
-
-<p>
-
-* 0-6.VM Virtual Box 설치
-  * (계속 next 눌러주면 된다)
-
-<br/>
-
-<img style="float: left;" src="https://user-images.githubusercontent.com/49095304/62466979-a3745680-b7cd-11e9-8c7b-9b274f7bb695.JPG" width="400"/>
-
-<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-
-</p>
-
----
-
-<p>
-
-* 0-7. VM Virtual Box 실행
-
-<br/>
-
-<img style="float: left;" src="https://user-images.githubusercontent.com/49095304/62467400-a754a880-b7ce-11e9-82ae-79d2463e2054.JPG" width="500"/>
-
-<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-
-</p>
-
----
-
-<p>
-
-* 주의!! 최신 버전으로 하는것이 아니므로 업데이트는 금물!
-
-<br/>
-
-<img style="float: left;" src="https://user-images.githubusercontent.com/49095304/62467915-cbfd5000-b7cf-11e9-9350-241298e27863.JPG" width="350"/>
-
-<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-
-</p>
-
----
-
-<p>
-
-* 1.Vagrant
-  *  https://www.vagrantup.com/ > download
-
- <br/>
-
- <img style="float: left;" src="https://user-images.githubusercontent.com/49095304/62468137-44641100-b7d0-11e9-9373-7901c674a2c5.JPG" width="400"/>
-
- <br/><br/><br/><br/><br/><br/><br/><br/>
-
-* 1-1. download older version of Vagrant 다운로드로 이동 (default install)
-
-<br/>
-
-<img style="float: left;" src="https://user-images.githubusercontent.com/49095304/62468249-9147e780-b7d0-11e9-8ef4-320e39769598.JPG" width="300"/>
-
- <br/><br/>
-
-* 1-2. Vagrant_2.2.2_x86_64.msi  다운로드
-
-<br/>
-
- <img style="float: left;" src="https://user-images.githubusercontent.com/49095304/62468469-1af7b500-b7d1-11e9-9aa6-94691349c2cb.JPG" width="270"/>
-
-<br/><br/>
-
- </p>
-
- ---
-
- <p>
-
- * 1-3.Vagrant 다운로드
-    * (계속 진행해 다운로드 !!)
-
-<br/>
-
-<img style="float: left;" src="https://user-images.githubusercontent.com/49095304/62471990-c8ba9200-b7d8-11e9-8407-f16439726ad4.JPG" width="400"/>
-
-<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-
-</p>
-
----
-
-<p>
-
-* 1-4.Vagrant를 다운받은 폴더로 이동
-
-<br/>
-
-<img style="float: left;" src="https://user-images.githubusercontent.com/49095304/62472269-50a09c00-b7d9-11e9-913c-eeebbaed268e.JPG" width="600"/>
-
-<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-
-</p>
-
----
-
-<p>
-
-* 1-5. CMD 를 관리자 권한으로 실행
-  *
-
-<br/>
-
-<img style="float: left;" src="https://user-images.githubusercontent.com/49095304/62472486-bc830480-b7d9-11e9-8f9a-c4b48f4ab256.JPG" width="600"/>
-
-<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-
-* 파일 생성 확인
-
-<br/>
-
-<img style="float: left;" src="https://user-images.githubusercontent.com/49095304/62472751-5b0f6580-b7da-11e9-9dc2-115823c18ec6.JPG" width="600"/>
-
-<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-
-</p>
-
----
-
-<p>
-
-* 1-6.Vagrantfile 실행
-
-<br/>
-
-<img style="float: left;" src="https://user-images.githubusercontent.com/49095304/62472945-c1948380-b7da-11e9-911a-3b8dc0cfcc9f.JPG" width="600"/>
-
-<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-
-</p>
-
----
-
-<p>
-
-* 1-7. Vagrantfile의 모든 내용을 제거한 후 다음을 추가한다.
-
-<br/>
-
-  ~~~
-  
-  VAGRANTFILE_API_VERSION = "2"
-
-  Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
-
-       config.ssh.insert_key = false
-       config.vm.define :nn01 do |nn01_config|
-          nn01_config.vm.box = "centos/7"
-          nn01_config.vm.hostname = "nn01"
-          nn01_config.vm.network "private_network", ip: "192.168.56.101"
-          nn01_config.vm.provider :virtualbox do |vb|
-              vb.name = "nn01"
-              vb.memory = "4096"
-          end
-
-       end
-
-      config.vm.define :dn01 do |dn01_config|
-          dn01_config.vm.box = "centos/7"
-          dn01_config.vm.hostname = "dn01"
-          dn01_config.vm.network "private_network", ip: "192.168.56.102"
-          dn01_config.vm.provider :virtualbox do |vb|
-              vb.name = "dn01"
-              vb.memory = "4096"
-          end
-      end
-
-
-
-  config.vm.define :dn02 do |dn02_config|
-          dn02_config.vm.box = "centos/7"
-          dn02_config.vm.hostname = "dn02"
-          dn02_config.vm.network "private_network", ip: "192.168.56.103"
-          dn02_config.vm.provider :virtualbox do |vb|
-              vb.name = "dn02"
-              vb.memory = "4096"
-          end
-      end
-
-
-  end
-
-  ~~~
-
-  <br/>
-
-  </p>
-
-  ---
