Vue.js study updates

--- a/_posts/2020-03-29-Vue.js-1.intro.markdown
+++ b/_posts/2020-03-29-Vue.js-1.intro.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "2020-03-29-[Vue.js]-Vue.js intro"
+title:  "2020-03-29-[Vue.js]-Vue.js 1.intro"
 subtitle:   "2020-03-29 Vue.js intro "
 categories: devlog
 tags: vue
