Vue.js study updates

--- a/_posts/2020-03-30-Vue.js-4.Vue-Instance(1).markdown
+++ b/_posts/2020-03-30-Vue.js-4.Vue-Instance(1).markdown
@@ -91,3 +91,47 @@ new Vue({
 - 인스턴스의 유효 범위
   - 뷰 인스턴스를 생성하면 HTML의 특정 범위 안에서만 옵션 속성들이 적용되어 나타남 <br/>
   이를 인스턴스의 유효 범위라고 한다.
+<br/>
+
+- 인스턴스가 생성된 후 화면에 어떻게 적용되는지 알아야 이해가 가능하다.
+
+> 1. new Vue()로 인스턴스를 생성하고 나서 화면에 인스턴스 옵션 속성을 적용
+
+1. 뷰 라이브러리 파일로딩 <br/>
+
+2. 인스턴스 객체 생성 (옵션 속성 포함) <br/>
+
+3. 특정 화면 요소에 인스턴스를 붙임 <br/>
+
+4. 인스턴스 내용이 화면 요소로 변환 <br/>
+
+5. 변호나된 화면 요소를 사용자가 최종 확인 <br/>
+
+```
+
+new Vue({
+  el: '#app',
+  data: {
+    message: 'Hello Vue.js'
+  }
+  });
+
+```
+
+<br/>
+
+1. 자바스크립트 코드 상에서 인트선트 옵션 속성 el 과 data를 인스턴스에 정의
+<br/>
+2. new Vue()로 인스턴스 생성
+<br/>
+3. 브라우저에서 위 샘플 코드를 실행하면 el 속성에 지정한 화면 요소(돔)에 인스턴스 부착 <br/>
+4. el 속성에 인스턴스가 부착되고 나면 인스턴스에 정의한 옵션 객체의 내용(data)이 <br/>
+그 이하 레벨의 화면 요소에 적용되어 값이 치환 <br/>
+5. data 속성의 message 값 Hello Vue.js 가 {{ message }}와 치환 <br/>
+
+
+<br/>
+
+<hr style="height: 1px; background: skyblue; "/>
+
+<br/>
