--- a/_posts/2020-12-27-Algorithm-1.algorithm-intro.markdown
+++ b/_posts/2020-12-27-Algorithm-1.algorithm-intro.markdown
@@ -21,10 +21,26 @@ tags: algorithm
 <br/>
 
 #### 알고리즘 이란
-
+<p>
+알고리즘은 '문제를 푸는 절차' 라고 할수 있다.
+<br/>
+문제를 푸는 절차라 함은 우리가 숫자를 계산할때의 절차라고 할수 있다.
+<br/>
+알고리즘을 쉽게 이해하기 위해서는 주로 요리 레시피에 비유 할수 있다.
+<br/>
+예를들어서 라면을 끓이는 과정에서
+<br/>
+1) 물을 끓인다.
+<br/>
+2) 스프를 넣는다.
+<br/>
+3) 면을 넣는다.
+<br/>
+4) 라면 완성
+<br/>
+</p>
 
 <br/>
-
 <hr style="height: 1px; background: skyblue; "/>
 
 <br/>
