--- a/_posts/2020-12-30-Algorithm-2.algorithm-algorithm.markdown
+++ b/_posts/2020-12-30-Algorithm-2.algorithm-algorithm.markdown
@@ -26,6 +26,9 @@ tags: algorithm
 8~9세기에 활약한 아라비아 수학자 알 콰리즈미에서 어원의 유래를 찾을 수 있습니다.<br/>
 </p>
 
+<p>
+문헌상 기록된 가장 오래된 알고리즘은 유클리드의 저서 'Euclid's Element
+에 기록되어 있습니다.</p>
 
 
 
