--- a/_posts/2020-12-30-Algorithm-2.algorithm-algorithm.markdown
+++ b/_posts/2020-12-30-Algorithm-2.algorithm-algorithm.markdown
@@ -23,12 +23,83 @@ tags: algorithm
 #### 알고리즘 이란
 
 <p>
-8~9세기에 활약한 아라비아 수학자 알 콰리즈미에서 어원의 유래를 찾을 수 있습니다.<br/>
-</p>
+알고리즘 (algorithm)은 9세기 페르시아 수학자 알 콰리즈마 (콰리즈마는 호라즘 출신 사람을 뜻함)을<br/>
+라틴어로 번역한 이름인 algorimus에서 유래된 말.
+<br/><br/>
 
-<p>
-문헌상 기록된 가장 오래된 알고리즘은 유클리드의 저서 'Euclid's Element
-에 기록되어 있습니다.</p>
+
+- 알고리즘과 프로그램의 차이
+<br/>
+
+
+문제 해결을 위한 '작업 절차 자체' 를 뜻하며 그 절차를 실행하는 수단을 뜻하지 않는다.
+<br/>
+
+
+그러나 문제를 풀기 위해서는 어떤 수단으로 알고리즘을 실행시켜야 한다.
+<br/>
+
+
+컴퓨터에서 알고리즘을 실행 할 수 있는 형태로 구축한 것이 "프로그램"이라고 할 수 있다.
+<br/>
+
+
+과거, 컴퓨터가 없던 시절에는 작업 지시서를 알고리즘 이라고 할 수 있었으며 그 실행 주체는
+<br/> 사람으로 말할 수 있다.
+
+
+
+문헌 상 가장 오래된 알고리즘은 유클리드의 저서에 담긴
+<br/>유클리드 호제법('Euclidean Algorithm')
+<br/><br/>
+
+
+- 컴퓨터 등장 이전의 알고리즘
+<br/>
+
+
+알고리즘은 처리 절차 그 자체 = 그것을 실행하는 수단과 관계 X
+<br/>
+
+
+알고리즘은 사람이 직접 작성하였고, 직접 실행 하였다.
+<br/>
+예를 들어 고대 그리스 시대의 삼각함수표, 로그를 고안한 네이피어가 20년간 작성하기도 하였으며,<br/> 미국의 뉴딜 정책하의 수학 조견표를 작성하는 것, 2차 대전중 영국이 독일군을 이기기 위해<br/> 독일군 암호체계인 에니그마를 해독하려고 알고리즘을 만들고, 실행하였다.
+<br/><br/>
+
+
+- 컴퓨터 등장 이후 알고리즘
+<br/>
+
+
+알고리즘은 사람의 손으로 직접 하는 것은 한계가 존재하였다.
+<br/>
+이후 19세기에 찰스 베버지가 만든 차분기관(difference engine)과 톱니바퀴 등의 부품을 이용한<br/> 기계식 계산기가 등장
+<br/>
+
+20세기에는 ABC, ENIAC 등 전자계산기가 등장하였다.
+<br/>
+
+
+컴퓨터가 등장하면서 알고리즘의 지각은 변동한다.
+<br/>
+컴퓨터 등장 이전에는 알고리즘을 고안을 하였어도 그것을 증명하거나 빠르게 실행할 수단이<br/> 존재하지 않았다.
+
+컴퓨터의 등장으로 알고리즘을 빠르게 실행해줄 수 있게 되었다.
+<br/><br/>
+
+
+- 21세기의 알고리즘
+<br/>
+
+
+21세기에서는 점점 더 수준 높은 알고리즘을 원한다.
+<br/>
+자율 주행 자동차, 인공 지능, 전자 상거래, 선거 등 엄청난 시간이 걸리는 문제의 해결을 위해 <br/> 더욱 높은 알고리즘을 사용해야 하기 때문이다.
+<br/>
+ 
+
+최근 주목받고 있는 알고리즘은 머신러닝, 영지식 증명, 유전 알고리즘이 있다.</p>
 
 
 
