--- a/_posts/2021-01-03-Algorithm-3.algorithm-example1.markdown
+++ b/_posts/2021-01-03-Algorithm-3.algorithm-example1.markdown
@@ -27,5 +27,8 @@ tags: algorithm
 <hr style="height: 1px; background: skyblue; "/>
 
 
+<hr style="height: 1px; background: skyblue; "/>
+
+
 <!-- <img style="float: left;" src="https://user-images.githubusercontent.com/49095304/78002312-fe1c7d00-7371-11ea-84a5-1bbc7a6df22c.JPG" width="400"/>
 <br/><br/><br/><br/><br/><br/><br/> -->
